# filtar

./: Cargo.toml  LICENSE  README.md  filtar.pyi  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
