[package]
name = "filtar"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "filtar"
crate-type = ["cdylib"]

[dependencies]
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
pyo3 = { version = "0.28.2", features = ["abi3-py310"] }
tar = "0.4.45"
walkdir = "2.5.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }
