[project]
name = "filtar"
version = "0.1.1"
description = "Partially compress and extract tar archives"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Pearsteam", email = "93873756+Birnendampf@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 4 - Resilient",
    "Programming Language :: Rust",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Topic :: System :: Archiving :: Compression",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Source = "https://github.com/Birnendampf/filtar"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"
